--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ bot.username=my.todo_bot
 spring.datasource.url=jdbc:postgresql://localhost/todo
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=pgpwd4habr
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
